# unicon-runner

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
examples/: exec_version.json  files.json  gpu.json  hello_world.json  runtime_deps.json
unicon_runner/: __main__.py  app.py  cli.py  constants.py  helpers.py  job.py  models.py
unicon_runner/executor/: __init__.py  base.py  podman.py  run.py  sandbox.py  unsafe.py
unicon_runner/executor/podman/: executor.py
unicon_runner/executor/sandbox/: executor.py
unicon_runner/executor/templates/: Dockerfile.jinja  pyproject.toml.jinja  run_sandbox.sh.jinja  run_unsafe.sh.jinja  slurm.sh.jinja
unicon_runner/executor/unsafe/: executor.py
unicon_runner/executor/unsafe/scripts/: run.sh
unicon_runner/executor/variants/: base.py  podman.py  sandbox.py  unsafe.py
unicon_runner/executor/variants/podman/: executor.py
unicon_runner/executor/variants/sandbox/: executor.py
unicon_runner/executor/variants/sandbox/scripts/: install.sh  run.sh
unicon_runner/executor/variants/unsafe/: executor.py
unicon_runner/executor/variants/unsafe/scripts/: run.sh
unicon_runner/executor/variants/unsafe/templates/: pyproject.toml.jinja
unicon_runner/lib/: common.py  graph.py
unicon_runner/runner/: base.py  runner.py
unicon_runner/runner/task/: programming.py
unicon_runner/schemas/: __init__.py
unicon_runner/scripts/: cli.py  test.json  test1.json  test2.json  test_loop.json  test_requirements.json  test_small.json
unicon_runner/util/: redis_connection.py
