[project]
name = "unicon-runner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9.2",
    "pathvalidate>=3.2.1",
    "jinja2>=3.1.4",
    "pika>=1.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
